tests/invalid/functions/declaration_mismatch.rs
/*
fail: 1
*/

foo(a: int): int;

main(): int {
    return 5;
}

foo(a: int, b: int): int {
    return 4;
}